--- a/config/vagrant/Vagrantfile
+++ b/config/vagrant/Vagrantfile
@@ -14,16 +14,16 @@
 Vagrant.configure("2") do |config|
 
   # The name of the base box.
-  config.vm.box = "centos-6.3"
+  config.vm.box = "centos-6.4"
 
   # The url to fetch the base box from, if it doesn't exist.
-  config.vm.box_url = "https://s3.amazonaws.com/itmat-public/centos-6.3-chef-10.14.2.box"
+  config.vm.box_url = "http://developer.nrel.gov/downloads/vagrant-boxes/CentOS-6.4-x86_64-v20131103.box"
 
   # The following creates a forwarded port mapping which allows access 
   # to a specific port within the machine from a port on the host machine. 
 
   # The webserver can run on port 8500.
-  config.vm.network :forwarded_port, guest: 80, host: 8500, autocorrect: true 
+  config.vm.network :forwarded_port, guest: 80, host: 8500, autocorrect: true
 
   # Make the VM publically available.
   config.vm.network :public_network
