--- a/config/vagrant/Vagrantfile
+++ b/config/vagrant/Vagrantfile
@@ -36,7 +36,9 @@ Vagrant.configure("2") do |config|
       vb.customize ["modifyvm", :id, "--memory", "1024"]                     
   end
 
-  # Let Puppet do the provisioning.
-  config.vm.provision :puppet, :options => '--verbose'
+  # Let Ansible do the provisioning.
+  config.vm.provision "ansible" do |ansible|
+    ansible.playbook = "ansible/playbook.yml"
+  end
 
 end
