--- a/config/vagrant/Vagrantfile
+++ b/config/vagrant/Vagrantfile
@@ -10,7 +10,7 @@
 #
 
 
-# USING VAGRANT 1.2!! Vagrant 1.1 and lower will not work here.
+# USING VAGRANT 1.2+!! Vagrant 1.1 and lower will not work here.
 Vagrant.configure("2") do |config|
 
   # The name of the base box.
@@ -22,8 +22,8 @@ Vagrant.configure("2") do |config|
   # The following creates a forwarded port mapping which allows access 
   # to a specific port within the machine from a port on the host machine. 
 
-  # The webserver can run on port 8500.
-  config.vm.network :forwarded_port, guest: 80, host: 8500, autocorrect: true
+  # A webserver can run on port 3750.
+  config.vm.network :forwarded_port, guest: 80, host: 3750, autocorrect: true
 
   # Make the VM publically available.
   config.vm.network :public_network
