Modified the vagrant file so the vm relies on the host's dns resolving and proxying.

--- a/config/vagrant/Vagrantfile
+++ b/config/vagrant/Vagrantfile
@@ -24,21 +24,19 @@ Vagrant.configure VAGRANTFILE_API_VERSION do |configure|
 
   # Change some VirtualBox defaults.
   configure.vm.provider :virtualbox do |virtualbox|
+
     # Disable accelerated 3D graphics.
-    virtualbox.customize [
-      'modifyvm',
-      :id,
-      '--accelerate3d',
-      'off',
-    ]
+    virtualbox.customize ['modifyvm', :id, '--accelerate3d', 'off']
 
     # Add 512MB of memory to the VM.
-    virtualbox.customize [
-      'modifyvm',
-      :id,
-      '--memory',
-      '512',
-    ]
+    virtualbox.customize ['modifyvm', :id, '--memory', '512']
+
+    # Use the host's DNS resolvers (not the VMs).
+    virtualbox.customize ['modifyvm', :id, '--natdnshostresolver1', 'on']
+
+    # And use the host's DNS proxy too.
+    virtualbox.customize ['modifyvm', :id, '--notdnsproxy1', 'on']
+
   end
 
   # Let Ansible do the provisioning.
